fix: correct text truncation in .is-cropped css class

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ html {
 
 .is-cropped {
   white-space: nowrap;
-  overflow-x: clip;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
@@ -77,7 +77,7 @@ html {
   display: none;
 }
 
-.has-hidden:hover>.is-toggle-hidden {
+.has-hidden:hover > .is-toggle-hidden {
   display: block;
 }
 
